FINALLY able to add stocks to follow list.

--- a/app/views/stockapp/index.html.erb
+++ b/app/views/stockapp/index.html.erb
@@ -1,61 +1,80 @@
 <div id='header'>
-  <h1>Name Pending<small>   Time to Lose Some Money</small></h1>
+  <h1>Stock Jocky<small> Time to Lose Some Money</small></h1>
 </div>
 
 <div ng-controller='ClockController' id='clock'>
   {{ clock | date:'medium' }}
 </div>
 
-<div class='row'>
-  <div class='small-4 columns'>
-    <form ng-submit='createStock'>
-      <input type='text' ng-model='newSymbol' placeholder='Symbol'>
-      <button class='button [ small radius round]' type='submit' value='Follow'>Follow</button>
-    </form>
-  </div>
-</div>
+<div class='row' id='everything'>
 
-<div ng-show='error'>
-  Sorry! Unable to communicate with Yahoo Finance API.
-</div>
+  <div ng-controller='StocksController'>
 
-<div class='row'>
-  <div class='large-8 columns'>
-    <div id='tabs' ng-controller='TabsController'>
-      <ul>
-        <li ng-repeat='tab in tabs' ng-class='{active:isActiveTab(tab.url)}' ng-click='onClickTab(tab)'>{{ tab.title }}</li>
-      </ul>
-      <div id='mainView'>
-        <div ng-include='currentTab'></div>
+    <div id='findSymbol' class='small-4 columns'>
+      <form ng-submit='createStock()'>
+        <select ui-select2='select2Options' ng-click='createStock()' ng-model='newCompany' ng-options='stock.name for stock in stocklist' data-placeholder='Companies' ng-required='true' id='companyForm' style='width:200px'>
+          <option value=''></option>
+          <option ng-repeat='stock in stocklist' value=''></option>
+        </select>
+        <!-- <select ng-model='newCompany', data-placeholder='Enter company name', ng-required='true', id='companyForm' style='width: 190px;'> -->
+          <!-- <option value=''></option>
+          <option ng-repeat='stock in stocklist' value=''>{{ stock.name }} {{ stock.symbol }}</option> -->
+        <!-- </select> -->
+        <!-- <input type='submit' value='Follow'> -->
+      </form>
+      <p>
+        {{newCompany.name}}
+        ({{newCompany.symbol}})
+      </p>
+    </div>
+
+    <div ng-show='loading' id='loading'>
+      Loading, please wait
+    </div>
+
+    <div ng-show='error'>
+      Sorry, unable to communicate with Yahoo Finance API
+    </div>
+
+    <div class='medium-8 columns'>
+      <div ng-controller='TabsController'>
+        <ul>
+          <li ng-repeat='tab in tabs' ng-class='{active:isActiveTab(tab.url)}' ng-click='onClickTab(tab)' id='tabs'>{{ tab.title }}</li>
+        </ul>
+        <div id='mainView'>
+          <div ng-include='currentTab'></div>
+        </div>
       </div>
     </div>
-    <script type='text/ng-template' id='one.tpl.html'>
-      <div id='viewOne'>
-        <h1>My Profile</h1>
-        <p>Shit... I forgot that Im going to have to make something for people to view their own profile... damnit...</p>
-      </div>
-    </script>
-    <script type='text/ng-template' id='two.tpl.html'>
-      <div id='viewTwo' ng-controller='StocksController'>
-        <h1>My Stocks</h1>
-        <ul>
-          <li ng-repeat='stock in stocks' id='stockList'>
-            <strong>{{ stock.symbol }}</strong>
-            {{ stock.name}} </br>
-            <strong>Bid:</strong> {{ stock.bid}} </bid></br>
-            <strong>Ask:</strong> {{ stock.ask }}</br>
-            <strong>Year High:</strong> {{ stock.year_heigh}}</br>
-            <strong>Year Low:</strong> {{ stock.year_low }}</br>
-            <button class='button [ small secondary alert radius round]' href='' ng-click='deleteStock(stock.id, $index)' id='delete'>Delete</button>
-          </li>
-        </ul>
-      </div>
-    </script>
-    <script type='text/ng-template' id='three.tpl.html'>
-      <div id='viewThree'>
-        <h1>Feed</h1>
-        <p>News Feed stuff will go here so any stocks/posts your friends make will show up aqui</p>
-      </div>
-    </script>
+      <script type='text/ng-template' id='one.tpl.html'>
+        <div id='viewOne'>
+          <h1>My Profile</h1>
+          <p>Shit... I forgot that Im going to have to make something for people to view their own profile... damnit...</p>
+        </div>
+      </script>
+      <script type='text/ng-template' id='two.tpl.html'>
+        <div id='viewTwo' ng-controller='StocksController'>
+          <h1 id='tab1'>My Stocks</h1>
+          <ul>
+            <li ng-repeat='stock in stocks' id='stockList'>
+              <strong>{{ stock.symbol }}</strong>
+              {{ stock.name}} </br>
+              <strong>Bid:</strong> {{ stock.bid}} </bid></br>
+              <strong>Ask:</strong> {{ stock.ask }}</br>
+              <strong>Year High:</strong> {{ stock.year_heigh}}</br>
+              <strong>Year Low:</strong> {{ stock.year_low }}</br>
+              <button class='button [ small radius round]' ng-click='updateStock(stock.id, $id)'>Update</button>
+              <button class='button [ small secondary alert radius round]' href='' ng-click='deleteStock(stock.id, $index)' id='delete'>Delete</button><hr>
+            </li>
+          </ul>
+        </div>
+      </script>
+      <script type='text/ng-template' id='three.tpl.html'>
+        <div id='viewThree'>
+          <h1>Feed</h1>
+          <p>News Feed stuff will go here so any stocks/posts your friends make will show up aqui</p>
+        </div>
+      </script>
+    </div>
   </div>
 </div>
