--- a/app/assets/stylesheets/stockapp.css.scss
+++ b/app/assets/stylesheets/stockapp.css.scss
@@ -11,6 +11,19 @@
   color: #585858;
   position: relative;
   left: 30px;
+  margin-bottom: 10px;
+}
+
+#everything {
+  margin-left: 0px;
+}
+
+#companyForm {
+  padding: 10px;
+}
+
+#findSymbol {
+  min-width: 50px;
 }
 
 h1 {
@@ -43,7 +56,20 @@ input[type=text] {
   padding: 12px;
 }
 
+#tabs {
+  display: inline;
+  padding: 0px 10px 0px 10px;
+  border: 1px solid #D9D9D9;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+#mainView {
+  margin-top: 0px;
+  padding-top: 0px;
+}
+
 p {
-  border: solid black;
+  border: 1px solid #D9D9D9;
   padding: 12px;
 }
