--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
 
-
+  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <link href='http://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css'>
 </head>
 <body>
