--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <link href='http://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css'>
+  <% if user_signed_in? %>
+    <%= link_to 'edit account', edit_user_registration_path %> |
+    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+  <% else %>
+    <%= link_to 'sign in', new_user_session_path %>
+  <%end%>
 </head>
 <body>
 
