--- a/app/assets/stylesheets/stockapp.css.scss
+++ b/app/assets/stylesheets/stockapp.css.scss
@@ -65,8 +65,15 @@ input[type=text] {
 }
 
 #mainView {
+  border: 1px solid #D9D9D9;
+  clear: both;
   margin-top: 0px;
   padding-top: 0px;
+}
+
+.active {
+  background-color: #C1E1A6;
+  color: #000;
 }
 
 p {
