--- a/app/assets/stylesheets/stockapp.css.scss
+++ b/app/assets/stylesheets/stockapp.css.scss
@@ -27,6 +27,20 @@
   min-width: 50px;
 }
 
+.animate-enter, .animate-leave {
+  transition: 500ms ease-in all;
+  position: relative;
+  display: block;
+}
+
+.animate-enter.animate-enter-active, .animate-leave {
+  left: 0;
+}
+
+.animate-leave.animate-leave-active, .animate-enter {
+  left: 500px;
+}
+
 h1 {
   font-weight: bold;
   font-family: 'Josefin Slab', serif;
