--- a/app/assets/stylesheets/stockapp.css.scss
+++ b/app/assets/stylesheets/stockapp.css.scss
@@ -4,7 +4,7 @@
 
 #header {
   background-color: #C1E1A6;
-  margin-top: -21px;
+
   width: 100%;
 }
 
@@ -12,7 +12,6 @@
   color: #585858;
   position: relative;
   left: 30px;
-  margin-bottom: 10px;
 }
 
 #everything {
@@ -45,9 +44,10 @@ h1 {
   font-weight: bold;
   font-family: 'Josefin Slab', serif;
   color: #FF9009;
-  padding: 20px 12px 20px 20px;
+  padding: 10px 0px 0px 10px;
   position: relative;
-  border: 1px solid #D9D9D9;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 ul {
@@ -56,6 +56,11 @@ ul {
 
 input[type=text] {
   color: green;
+}
+
+a {
+  float: right;
+  padding: 0px 10px 0px 0px;
 }
 
 #stockList {
