--- a/app/views/stockapp/index.html.erb
+++ b/app/views/stockapp/index.html.erb
@@ -1,6 +1,6 @@
-<div id='header'>
+<!-- <div id='header'>
   <h1>Stock Jocky<small> Time to Lose Some Money</small></h1>
-</div>
+</div> -->
 
 <div ng-controller='ClockController' id='clock'>
   {{ clock | date:'medium' }}
@@ -41,7 +41,7 @@
       <script type='text/ng-template' id='one.tpl.html'>
         <div id='viewOne'>
           <h1>My Profile</h1>
-          <p>Shit... I forgot that Im going to have to make something for people to view their own profile... damnit...</p>
+          <p>User profile information goes here</p>
         </div>
       </script>
       <script type='text/ng-template' id='two.tpl.html'>
